[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/PlaceholderTilesetBuildings.tres" type="TileSet" id=1]
[ext_resource path="res://Assets/PlaceholderTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/PlaceholderTilesetClicked.tres" type="TileSet" id=3]
[ext_resource path="res://TileMapBuildings.gd" type="Script" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Camera2D.gd" type="Script" id=6]
[ext_resource path="res://DebugGUI.tscn" type="PackedScene" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMapWorld" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( -262143, 2, 0, -262142, 2, 0, -262141, 2, 0, -262140, 2, 0, -262139, 2, 0, -262138, 2, 0, -262137, 2, 0, -262136, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 2, 0, -196603, 2, 0, -196602, 2, 0, -196601, 2, 0, -196600, 2, 0, -196599, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131062, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 327679, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0 )

[node name="TileMapClicked" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 32 )
format = 1

[node name="TileMapBuildings" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
cell_custom_transform = Transform2D( 64, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( -196605, 0, 0, -65538, 0, 0, -131070, 0, 0, -1, 0, 0, -65535, 0, 0, 0, 0, 0, 131071, 0, 0, 65537, 0, 0, 196606, 0, 0, 131074, 0, 0, 196611, 0, 0 )
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugUI" parent="CanvasLayer" instance=ExtResource( 7 )]
position = Vector2( 1.45645, 368.641 )
